--- a/src/components/skillicons.css
+++ b/src/components/skillicons.css
@@ -14,6 +14,13 @@
     }
 }
 
+@media (max-width: 330px) {
+    .skillgrid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
 @media (min-width: 681px) {
     .skillgrid {
         display: flex;
