--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,21 @@
-@media (max-width: 680px) {
+@media (max-width: 820px) {
     .Navbar {
         display: none;
     }
 }
 
-@media (min-width: 681px) {
+@media (min-width: 821px) {
     .Mobilebar {
         display:none;
     }
+}
+
+.Mobilebar {
+    padding-top: 8%;
+    padding-right: 7%;
+    padding-left: 5%;
+}
+
+* {
+    font-family: "Rubik", sans-serif;
 }
